--- a/frontendnsq/nsqfrontend/src/Components/Quiz/Quiz.css
+++ b/frontendnsq/nsqfrontend/src/Components/Quiz/Quiz.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: "Poppins", sans-serif;
+    font-family: "Times New Roman", sans-serif;
     margin-top: 50px;
     margin-bottom: 50px;
     text-transform: capitalize;
@@ -11,7 +11,6 @@
 .title {
     font-size: 25px;
     border: 1px solid black;
-    box-shadow: 1px 1px 2px black;
     padding: 10px 30px;
     font-style: italic;
     margin-bottom: 20px;
